--- a/Hub/Dockerfile.txt
+++ b/Hub/Dockerfile.txt
@@ -31,6 +31,6 @@ COPY generate_config \
 # Running this command as sudo just to avoid the message:
 # To run a command as administrator (user "root"), use "sudo <command>". See "man sudo_root" for details.
 # When logging into the container
-RUN /opt/bin/generate_config > /opt/selenium/config.json
+sudo RUN /opt/bin/generate_config > /opt/selenium/config.json
 
 CMD ["/opt/bin/entry_point.sh"]
